<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".ui.bienvenida.BienvenidaActivity">

    <ImageView
        android:id="@+id/imgLogoBackground"
        android:layout_width="0dp"
        android:layout_height="352dp"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/backgrounds"
        android:layout_marginTop="63dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:layout_marginStart="-9dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="9dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/btnIniciarSesion"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_max="402dp" />

    <ImageView
        android:id="@+id/imgBackgroundBotones"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:contentDescription="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/backgrounds"
        app:layout_constraintBottom_toBottomOf="@id/btnCrearCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnIniciarSesion"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="-28dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnIniciarSesion"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="79dp"
        android:backgroundTint="@color/primary"
        android:elevation="4dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/bienvenida_btn_iniciar_sesion"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@id/btnCrearCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCrearCuenta"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/primary"
        android:elevation="4dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/bienvenida_btn_crear_cuenta"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnIniciarSesion" />

</androidx.constraintlayout.widget.ConstraintLayout>